[gd_scene load_steps=8 format=3 uid="uid://f6sx27qsiwng"]

[ext_resource type="Script" uid="uid://ubhnxk2k4540" path="res://Scenes/Enemies/Cannon/cannon.gd" id="1_lan15"]
[ext_resource type="PackedScene" uid="uid://5neyynio6y20" path="res://Components/Range/range_component.tscn" id="2_m76od"]
[ext_resource type="AudioStream" uid="uid://730galcc0tit" path="res://SFX/Enemy Shoot.wav" id="3_lan15"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2tmfo"]
radius = 408.0

[sub_resource type="Animation" id="Animation_2tmfo"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.0, 18.8496]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_8p38h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wjfe"]
_data = {
&"RESET": SubResource("Animation_8p38h"),
&"death": SubResource("Animation_2tmfo")
}

[node name="Cannon" type="Node2D"]
script = ExtResource("1_lan15")

[node name="Pivot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.66309, 0.66309)

[node name="Barrel" type="ColorRect" parent="Pivot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -35.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.27272, 0.490338)
color = Color(6.01634e-09, 0.153793, 0.155213, 1)

[node name="Base" type="ColorRect" parent="Pivot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -44.0
offset_right = 3.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.02987, 1.02987)
color = Color(3.30899e-07, 0.162014, 0.16349, 1)

[node name="BarrelEnd" type="ColorRect" parent="Pivot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 44.0
offset_top = -44.0
offset_right = 50.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.27272, 0.490338)
color = Color(0, 0.371263, 0.373627, 1)

[node name="BarrelEndShot" type="Marker2D" parent="Pivot/BarrelEnd"]
position = Vector2(6.28573, 48.9458)

[node name="RangeComponent" parent="." instance=ExtResource("2_m76od")]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeComponent"]
shape = SubResource("CircleShape2D_2tmfo")

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3wjfe")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_lan15")

[connection signal="timeout" from="ShootDelay" to="." method="shoot"]
